tex fix to help push error

--- a/lectures/week3_ss_science_and_measure.html
+++ b/lectures/week3_ss_science_and_measure.html
@@ -30,7 +30,7 @@ class: center, middle
 
 --
 
-- I am sick 😷 (although physician approved to lecture today) - this has caused delays on...
+- I am sick 🤒 (although physician approved to lecture today) - this has caused delays on...
 
 --
 
@@ -321,7 +321,7 @@ Do you have to take this class?
 
 ## Mean
 
-`$${\displaystyle {\bar {x}}={\frac {1}{n}}\left(\sum _{i=1}^{n}{x_{i}}\right)={\frac {x_{1}+x_{2}+\cdots +x_{n}}{n}}}$$`
+`$${\bar {x}}={\frac {1}{n}}\left(\sum _{i=1}^{n}{x_{i}}\right)={\frac {x_{1}+x_{2}+\cdots +x_{n}}{n}}$$`
 
 ## Standard Deviation
 
